--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <h1>this is my website's page </h1>
     <h2>this is the change which is made</h2>
+    <h3>this is my 3rd line</h3>
   </body>
 </html>
